--- a/arch/arm64/configs/tgpkernel-hero2lte_defconfig
+++ b/arch/arm64/configs/tgpkernel-hero2lte_defconfig
@@ -2925,7 +2925,8 @@ CONFIG_EXYNOS_DECON_LCD=y
 CONFIG_EXYNOS_DECON_MDNIE_LITE=y
 CONFIG_EXYNOS_DECON_LCD_SYSFS=y
 CONFIG_PANEL_AID_DIMMING=y
-CONFIG_EXYNOS_DECON_LCD_MCD=y
+CONFIG_PANEL_SMART_DIMMING=y
+# CONFIG_EXYNOS_DECON_LCD_MCD is not set
 CONFIG_LCD_HMT=y
 # CONFIG_LCD_ALPM is not set
 CONFIG_LCD_DOZE_MODE=y
@@ -2939,7 +2940,7 @@ CONFIG_SUPPORT_CROSS_DOWNLOAD=y
 CONFIG_LCD_WEAKNESS_CCB=y
 # CONFIG_PANEL_DDI_SPI is not set
 # CONFIG_PANEL_DUALIZATION is not set
-CONFIG_LCD_BURNIN_CORRECTION=y
+# CONFIG_LCD_BURNIN_CORRECTION is not set
 # CONFIG_VDDR_1p5V_ALPM is not set
 # CONFIG_EXYNOS_DECON_8890_DUAL_DISPLAY is not set
 # CONFIG_PANEL_S6E36W0X10 is not set
