.gitignore: add exclusions for build output of our specific kernel
Signed-off-by: Michele Beccalossi <beccalossi.michele@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 *.so.dbg
 *.mod.c
 *.i
+*.pyc
 *.lst
 *.symtypes
 *.order
@@ -96,3 +97,5 @@ x509.genkey
 
 # Kconfig presets
 all.config
+
+cfp_log.txt
