.gitignore: ignore patch related files
Signed-off-by: Michele Beccalossi <beccalossi.michele@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@
 *.lzo
 *.zip
 *.patch
+*.diff
 *.gcno
 modules.builtin
 Module.symvers
@@ -87,6 +88,7 @@ GSYMS
 GTAGS
 
 *.orig
+*.rej
 *~
 \#*#
 
