--- a/arch/arm64/configs/prophecy-hero2lte_defconfig
+++ b/arch/arm64/configs/prophecy-hero2lte_defconfig
@@ -3877,7 +3877,7 @@ CONFIG_EXYNOS_REBOOT=y
 CONFIG_SAMSUNG_DMADEV=y
 CONFIG_ECT=y
 CONFIG_ECT_DUMP=y
-CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
+# CONFIG_EXYNOS_CONTENT_PATH_PROTECTION is not set
 CONFIG_EXYNOS_HOTPLUG_GOVERNOR=y
 CONFIG_SCHED_HP_EVENT=y
 # CONFIG_HP_EVENT_THREAD_GROUP is not set
@@ -4322,11 +4322,9 @@ CONFIG_MOTOR_DRV_SENSOR=y
 CONFIG_TRUSTONIC_TEE=y
 CONFIG_TRUSTONIC_TEE_LPAE=y
 # CONFIG_TRUSTONIC_TEE_DEBUG is not set
-CONFIG_TRUSTONIC_TRUSTED_UI=y
-CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK=y
-CONFIG_SECURE_OS_CONTROL=y
+# CONFIG_TRUSTONIC_TRUSTED_UI is not set
+# CONFIG_SECURE_OS_CONTROL is not set
 CONFIG_SECURE_OS_BOOSTER_API=y
-CONFIG_TRUSTED_UI_TOUCH_ENABLE=y
 CONFIG_EXYNOS_APM=y
 CONFIG_EXYNOS_MBOX=y
 CONFIG_EXYNOS8890_APM=y
