--- a/arch/arm64/configs/prophecy-hero2lte_defconfig
+++ b/arch/arm64/configs/prophecy-hero2lte_defconfig
@@ -4312,7 +4312,7 @@ CONFIG_TRUSTONIC_TEE=y
 CONFIG_TRUSTONIC_TEE_LPAE=y
 # CONFIG_TRUSTONIC_TEE_DEBUG is not set
 # CONFIG_TRUSTONIC_TRUSTED_UI is not set
-# CONFIG_SECURE_OS_CONTROL is not set
+CONFIG_SECURE_OS_CONTROL=y
 CONFIG_SECURE_OS_BOOSTER_API=y
 CONFIG_EXYNOS_APM=y
 CONFIG_EXYNOS_MBOX=y
