--- a/arch/arm64/configs/excel-herolte_defconfig
+++ b/arch/arm64/configs/excel-herolte_defconfig
@@ -527,6 +527,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPUFREQ_DT=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 
 #
 # ARM CPU frequency scaling drivers
