--- a/arch/arm64/configs/excel-herolte_defconfig
+++ b/arch/arm64/configs/excel-herolte_defconfig
@@ -343,13 +343,13 @@ CONFIG_ARM64_ERRATUM_824069=y
 CONFIG_ARM64_ERRATUM_819472=y
 CONFIG_ARM64_ERRATUM_832075=y
 CONFIG_ARM64_ERRATUM_845719=y
-CONFIG_TIMA=y
+# CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
 CONFIG_TIMA_RKP=y
 # CONFIG_TIMA_RKP_DEBUG is not set
-CONFIG_RKP_KDP=y
-CONFIG_RKP_NS_PROT=y
-CONFIG_RKP_DMAP_PROT=y
+# CONFIG_RKP_KDP is not set
+# CONFIG_RKP_NS_PROT is not set
+# CONFIG_RKP_DMAP_PROT is not set
 CONFIG_ARM64_4K_PAGES=y
 # CONFIG_ARM64_64K_PAGES is not set
 CONFIG_ARM64_VA_BITS_39=y
@@ -1158,7 +1158,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_HP_ILO is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
-CONFIG_KNOX_KAP=y
+# CONFIG_KNOX_KAP is not set
 # CONFIG_ISL29020 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1780 is not set
@@ -1364,7 +1364,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 # CONFIG_DM_UEVENT is not set
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 # CONFIG_DM_VERITY_FEC is not set
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
@@ -3458,7 +3458,7 @@ CONFIG_USB_U_SERIAL=y
 # CONFIG_USB_CONFIGFS is not set
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
-CONFIG_USB_ANDROID_SAMSUNG_MTP=y
+# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
 # CONFIG_USB_LOCK_SUPPORT_FOR_MDM is not set
 CONFIG_USB_DUN_SUPPORT=y
 CONFIG_USB_NCM_SUPPORT_MTU_CHANGE=y
@@ -3887,7 +3887,7 @@ CONFIG_EXYNOS_REBOOT=y
 CONFIG_SAMSUNG_DMADEV=y
 CONFIG_ECT=y
 CONFIG_ECT_DUMP=y
-CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
+# CONFIG_EXYNOS_CONTENT_PATH_PROTECTION is not set
 CONFIG_EXYNOS_HOTPLUG_GOVERNOR=y
 CONFIG_SCHED_HP_EVENT=y
 # CONFIG_HP_EVENT_THREAD_GROUP is not set
@@ -4332,8 +4332,7 @@ CONFIG_MOTOR_DRV_SENSOR=y
 CONFIG_TRUSTONIC_TEE=y
 CONFIG_TRUSTONIC_TEE_LPAE=y
 # CONFIG_TRUSTONIC_TEE_DEBUG is not set
-CONFIG_TRUSTONIC_TRUSTED_UI=y
-CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK=y
+# CONFIG_TRUSTONIC_TRUSTED_UI is not set
 CONFIG_SECURE_OS_CONTROL=y
 CONFIG_SECURE_OS_BOOSTER_API=y
 CONFIG_TRUSTED_UI_TOUCH_ENABLE=y
@@ -4732,10 +4731,10 @@ CONFIG_HAVE_ARCH_KGDB=y
 #
 # Samsung Rooting Restriction Feature
 #
-CONFIG_SEC_RESTRICT_ROOTING=y
-CONFIG_SEC_RESTRICT_SETUID=y
-CONFIG_SEC_RESTRICT_FORK=y
-CONFIG_SEC_RESTRICT_ROOTING_LOG=y
+# CONFIG_SEC_RESTRICT_ROOTING is not set
+# CONFIG_SEC_RESTRICT_SETUID is not set
+# CONFIG_SEC_RESTRICT_FORK is not set
+# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
 
 #
 # Security options
