--- a/arch/arm64/configs/excel-hero2lte_defconfig
+++ b/arch/arm64/configs/excel-hero2lte_defconfig
@@ -532,7 +532,13 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 CONFIG_CPUFREQ_DT=y
+
+#
+# Boeffla Wakelock Blocker
+#
 CONFIG_BOEFFLA_WL_BLOCKER=y
 
 #
