--- a/arch/arm64/configs/excel-hero2lte_defconfig
+++ b/arch/arm64/configs/excel-hero2lte_defconfig
@@ -534,6 +534,8 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
+CONFIG_CPU_FREQ_GOV_IRONACTIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_IRONACTIVE is not set
 CONFIG_CPUFREQ_DT=y
 
 #
