--- a/arch/arm64/configs/excel-herolte_defconfig
+++ b/arch/arm64/configs/excel-herolte_defconfig
@@ -536,6 +536,8 @@ CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 CONFIG_CPU_FREQ_GOV_IRONACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_IRONACTIVE is not set
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 CONFIG_CPUFREQ_DT=y
 
 #
