--- a/arch/arm64/configs/excel-herolte_defconfig
+++ b/arch/arm64/configs/excel-herolte_defconfig
@@ -272,6 +272,9 @@ CONFIG_BLOCK_SUPPORT_STLOG=y
 #
 # IO Schedulers
 #
+CONFIG_IOSCHED_BFQ=y
+# CONFIG_CGROUP_BFQIO is not set
+# CONFIG_DEFAULT_BFQ is not set
 CONFIG_IOSCHED_ROW=y
 # CONFIG_DEFAULT_ROW is not set
 CONFIG_IOSCHED_NOOP=y
