power: Powersuspend 1.7 and defconfig: enable smart dimming & pwrsuspnd

--- a/arch/arm64/configs/excel-herolte_defconfig
+++ b/arch/arm64/configs/excel-herolte_defconfig
@@ -499,6 +499,8 @@ CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 CONFIG_RELOCATABLE_KERNEL=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
+CONFIG_POWERSUSPEND=y
+# CONFIG_POWERSUSPEND_DEBUG is not set
 
 #
 # CPU Power Management
@@ -2863,6 +2865,7 @@ CONFIG_EXYNOS_DECON_LCD=y
 CONFIG_EXYNOS_DECON_MDNIE_LITE=y
 CONFIG_EXYNOS_DECON_LCD_SYSFS=y
 CONFIG_PANEL_AID_DIMMING=y
+CONFIG_PANEL_SMART_DIMMING=y
 # CONFIG_EXYNOS_DECON_LCD_MCD is not set
 CONFIG_LCD_HMT=y
 # CONFIG_LCD_ALPM is not set
@@ -2876,7 +2879,7 @@ CONFIG_PANEL_S6E3HA3_DYNAMIC=y
 CONFIG_SUPPORT_CROSS_DOWNLOAD=y
 CONFIG_LCD_WEAKNESS_CCB=y
 # CONFIG_PANEL_DDI_SPI is not set
-CONFIG_LCD_BURNIN_CORRECTION=y
+# CONFIG_LCD_BURNIN_CORRECTION is not set
 # CONFIG_VDDR_1p5V_ALPM is not set
 # CONFIG_EXYNOS_DECON_8890_DUAL_DISPLAY is not set
 # CONFIG_PANEL_S6E36W0X10 is not set
