dts: Increase charging levels
- USB Standard to 900
- USB Accesory charger to 900
- MHL USB to 660

Signed-off-by: djb77 <dwayne.bakewell@gmail.com>

--- a/arch/arm64/boot/dts/exynos8890-hero2lte_battery.dtsi
+++ b/arch/arm64/boot/dts/exynos8890-hero2lte_battery.dtsi
@@ -58,20 +58,20 @@
 
 			pinctrl-names = "default";
 			pinctrl-0 = <&wpc_int &wpc_det &wcin_ok &wpc_en>;
-			battery,ftt_freq = <&gpe7 3 0>;
 
 			battery,wpc_int = <&gpa3 2 0>;
 			battery,wpc_det = <&gpa3 5 0>;
+			battery,ftt_freq = <&gpe7 3 0>;
 
 			battery,charger_name = "max77854-charger";
 			battery,wireless_charger_name = "p9220-charger";
 
-			/* Hero1 5V */
-			battery,fod_data = <194 15 133 48 174 240 150 17 160 251 158 251>;
-			battery,fod_data_cv = <194 45 133 78 174 14 150 47 160 25 158 25>;
-			/* Hero1 9V */
-			battery,fod_hv_data = <194 15 133 48 174 240 150 17 160 251 158 251>;
-			battery,fod_hv_data_cv = <194 45 133 78 174 14 150 47 160 25 158 25>;
+			/* Hero2 5V */
+			battery,fod_data = <204 12 150 30 130 57 130 57 157 8 157 9>;
+			battery,fod_data_cv = <204 42 150 60 130 87 130 87 157 38 157 39>;
+			/* Hero2 9V */
+			battery,fod_hv_data = <204 12 150 30 160 57 150 57 157 8 157 9>;
+			battery,fod_hv_data_cv = <204 42 150 60 160 87 150 87 157 38 157 39>;
 			battery,wireless_cc_cv = <85>;
 			battery,wpc_cc_cv_vout = <5500>;
 			battery,wpc_cv_call_vout = <5000>;
@@ -109,18 +109,24 @@
 
 		battery,polling_time = <10 30 30 30 3600>;
 
-		battery,temp_table_adc = <290 338 393 548 647 754 879 1040 1249 1390 1575 1798 2260 2738 2943 3130 3305 3445 3678>;
-		battery,temp_table_data = <900 850 800 700 650 600 550 500 450 400 350 300 200 100 50 0 (-50) (-100) (-200)>;
+		battery,temp_table_adc = <297 347 406 476 564 642 754 828 879 934 1030 1127 1194 1265 1370 1484 1573 1657
+						1787 1922 2016 2253 2482 2706 2927 3007 3123 3228 3297 3361 3445 3585 3710>;
+		battery,temp_table_data = <900 850 800 750 700 650 600 570 550 530 500 470 450 430 400 370 350 330
+						300 270 250 200 150 100 50 30 0 (-30) (-50) (-70) (-100) (-150) (-200)>;
 
-		battery,chg_temp_table_adc = <369 519 616 721 843 999 1197 1348 1537 1757 2219 2695 2909 3099 3283 3439 3675>;
-		battery,chg_temp_table_data = <800 700 650 600 550 500 450 400 350 300 200 100 50 0 (-50) (-100) (-200)>;
+		battery,chg_temp_table_adc = <368 433 509 600 708 779 829 879 972 1067 1132 1200 1301 1412 1501
+						1583 1710 1843 1937 2175 2408 2634 2856 2944 3066 3176 3249 3316 3407 3547 3672>;
+		battery,chg_temp_table_data = <800 750 700 650 600 570 550 530 500 470 450 430 400 370 350
+						330 300 270 250 200 150 100 50 30 0 (-30) (-50) (-70) (-100) (-150) (-200)>;
 
-		battery,wpc_temp_table_adc = <370 519 615 721 843 998 1196 1347 1537 1758 2219 2696 2904 3084 3276 3430 3666>;
-		battery,wpc_temp_table_data = <800 700 650 600 550 500 450 400 350 300 200 100 50 0 (-50) (-100) (-200)>;
+		battery,wpc_temp_table_adc = <368 433 509 601 708 779 829 880 972 1067 1132 1200 1301 1412 1501
+						1583 1710 1842 1937 2174 2407 2632 2855 2942 3060 3170 3244 3309 3401 3541 3666>;
+		battery,wpc_temp_table_data = <800 750 700 650 600 570 550 530 500 470 450 430 400 370 350
+						330 300 270 250 200 150 100 50 30 0 (-30) (-50) (-70) (-100) (-150) (-200)>;
 
 		battery,input_current_limit = <1800 450 450 1800 900 900 1000 900 1000 450 900 660 900 1900 1800 450 450 400 700 1300 660 1000 1500 450 1675 1800 1000 1675 80 1800 1675 1400 1000 1000 600 900 900 660 1675 1800>;
-		battery,fast_charging_current = <2100 450 450 2100 900 1200 1000 900 1200 450 1350 1350 1350 1600 2100 450 450 400 700 1300 660 1000 1500 450 2400 2400 1000 2400 80 1800 1000 1400 450 1000 1350 1350 1350 1350 2400 2400>;
-		battery,full_check_current_1st = <300 0 0 300 300 300 300 300 300 0 300 300 300 300 300 0 0 300 300 300 300 300 300 0 300 300 300 300 0 300 300 300 0 300 300 300 300 300 300 300>;
+		battery,fast_charging_current = <2100 450 450 2100 900 1200 1000 900 1200 450 1300 1300 1300 1600 2100 450 450 400 700 1300 660 1000 1500 450 2600 2600 1000 2600 80 1800 1000 1400 450 1000 1300 1300 1300 1300 2600 2600>;
+		battery,full_check_current_1st = <350 0 0 350 350 350 350 350 350 0 350 350 350 350 350 0 0 350 350 350 350 350 350 0 350 350 350 350 0 350 350 350 0 350 350 350 350 350 350 350>;
 		battery,full_check_current_2nd = <150 0 0 150 150 150 150 150 150 0 150 150 150 150 150 0 0 150 150 150 150 150 150 0 150 150 150 150 0 150 150 150 0 150 150 150 150 150 150 150>;
 
 		battery,wireless_cc_cv = <85>;
@@ -178,16 +184,16 @@
 		battery,chg_gpio_full_check = <0>;
 		battery,chg_polarity_full_check = <1>;
 
-		battery,chg_high_temp_1st = <515>;
-		battery,chg_high_temp_2nd = <515>;
-		battery,chg_high_temp_recovery = <500>;
-		battery,chg_charging_limit_current = <1033>;
-		battery,chg_charging_limit_current_2nd = <1033>;
+		battery,chg_high_temp_1st = <500>;
+		battery,chg_high_temp_2nd = <500>;
+		battery,chg_high_temp_recovery = <495>;
+		battery,chg_charging_limit_current = <1100>;
+		battery,chg_charging_limit_current_2nd = <1100>;
 
-		/* hero1 eur, kor */
-		battery,wpc_high_temp = <430>;
-		battery,wpc_high_temp_recovery = <420>;
-		battery,wpc_lcd_on_high_temp = <410>;
+		/* hero2 eur, kor */
+		battery,wpc_high_temp = <410>;
+		battery,wpc_high_temp_recovery = <400>;
+		battery,wpc_lcd_on_high_temp = <390>;
 		battery,wpc_lcd_on_high_temp_rec = <300>;
 
 		battery,wpc_charging_limit_current = <450>;
@@ -228,10 +234,10 @@
 		battery,swelling_low_temp_block = <100>;
 		battery,swelling_low_temp_recov = <150>;
 
-		battery,swelling_low_temp_current = <1350>;	/* 0.45C */
-		battery,swelling_low_temp_topoff = <150>;	/* 0.05C */
-		battery,swelling_high_temp_current = <1350>;	/* 0.45C */
-		battery,swelling_high_temp_topoff = <150>;	/* 0.05C */
+		battery,swelling_low_temp_current = <1300>;	/* 0.8C * 0.45 */
+		battery,swelling_low_temp_topoff = <200>;	/* 0.05C */
+		battery,swelling_high_temp_current = <1300>;	/* 0.8C * 0.45 */
+		battery,swelling_high_temp_topoff = <200>;	/* 0.05C */
 		battery,swelling_wc_low_temp_current = <900>;	/* 0.3C */
 		battery,swelling_wc_high_temp_current = <900>;	/* 0.3C */
 
@@ -289,113 +295,110 @@
 		fuelgauge,sw_v_empty_voltage = <3200>;
 		fuelgauge,sw_v_empty_voltage_cisd = <3100>;
 		fuelgauge,sw_v_empty_recover_voltage = <3550>;
-		fuelgauge,qrtable20 = <0x0B00>;
-		fuelgauge,qrtable30 = <0x0A00>;
+		fuelgauge,qrtable20 = <0x0903>;
+		fuelgauge,qrtable30 = <0x0901>;
 		fuelgauge,fg_resistor = <1>;
-		fuelgauge,rcomp0 = <0x40>;
-		fuelgauge,rcomp_charging = <0x40>;
+		fuelgauge,rcomp0 = <0x80>;
+		fuelgauge,rcomp_charging = <0x80>;
 		fuelgauge,is_using_model_data;
 		fuelgauge,type_str = "SDI";
-		fuelgauge,capacity = <0x173B>;
+		fuelgauge,capacity = <0x1B5F>;
 		/*fuelgauge,auto_discharge_en;*/
 		fuelgauge,discharge_temp_threshold = <600>;
 		fuelgauge,discharge_volt_threshold = <4540>;
-		fuelgauge,cv_data = <2493  832  1437
-			2354  840  1405
-			2225  846  1373
-			2202  848  1367
-			2179  849  1360
-			2162  850  1355
-			2150  851  1351
-			2064  855  1327
-			1973  860  1301
-			1960  861  1297
-			1908  864  1281
-			1813  869  1249
-			1727  874  1219
-			1635  879  1186
-			1605  881  1175
-			1575  883  1163
-			1563  883  1158
-			1482  888  1126
-			1441  890  1109
-			1388  893  1086
-			1365  895  1075
-			1351  895  1068
-			1289  899  1040
-			1267  900  1030
-			1242  902  1017
-			1227  903  1009
-			1200  904  994 
-			1138  908  963 
-			1087  912  933 
-			1085  912  931 
-			1074  913  925 
-			1018  916  891 
-			988   917  874 
-			957   920  852 
-			939   920  840 
-			924   922  828 
-			871   924  796 
-			834   927  764 
-			818   928  752 
-			807   928  744 
-			800   929  738 
-			795   929  733 
-			778   930  718 
-			771   931  710 
-			739   933  683 
-			730   933  675 
-			721   934  669 
-			715   934  661 
-			714   934  660 
-			699   935  645 
-			695   936  641 
-			679   936  628 
-			672   937  622 
-			650   938  596 
-			625   940  566 
-			613   941  556 
-			606   941  545 
-			594   942  533 
-			591   943  531 
-			585   944  523 
-			581   945  518 
-			576   946  514 
-			569   947  505 
-			567   948  503 
-			565   948  499 
-			564   948  495 
-			559   949  487 
-			535   954  456 
-			532   955  453 
-			523   956  441 
-			515   958  430 
-			506   960  418 
-			486   964  387 
-			469   967  362 
-			468   967  359 
-			462   968  349 
-			454   970  334 
-			435   973  302 
-			434   974  300 
-			428   975  291 
-			422   976  280 
-			407   979  248 
-			406   979  247 
-			404   979  244 
-			389   982  218 
-			386   983  213 
-			375   985  188 
-			368   986  175 
-			355   989  143 
-			338   992  111 
-			337   993  103 
-			331   994  88  
-			319   996  56  
-			310   998  39  
-			307   998  32  
-			0   1000 0>;
+		fuelgauge,cv_data = <
+			2488	829	1809
+			2409	832	1796
+			2327	837	1769
+			2272	840	1743
+			2182	846	1721
+			2104	850	1690
+			2038	854	1670
+			1950	859	1640
+			1904	861	1622
+			1838	865	1594
+			1797	867	1576
+			1749	870	1560
+			1703	873	1531
+			1683	873	1525
+			1667	875	1515
+			1660	875	1512
+			1653	876	1509
+			1615	878	1502
+			1580	880	1483
+			1553	881	1463
+			1544	882	1458
+			1520	883	1451
+			1477	886	1424
+			1431	888	1409
+			1396	891	1383
+			1347	894	1361
+			1299	896	1332
+			1267	898	1315
+			1231	902	1288
+			1202	904	1263
+			1148	906	1243
+			1109	909	1213
+			1067	911	1185
+			1031	914	1156
+			1013	915	1140
+			975	917	1111
+			961	919	1084
+			921	921	1064
+			892	923	1038
+			887	923	1019
+			863	925	1004
+			833	927	976
+			808	929	946
+			787	930	918
+			780	931	904
+			764	932	895
+			744	934	864
+			730	935	846
+			715	936	828
+			693	937	800
+			681	938	783
+			666	940	752
+			651	941	735
+			640	942	712
+			628	945	697
+			622	946	679
+			618	947	664
+			600	950	646
+			596	951	627
+			589	953	614
+			584	953	601
+			576	956	572
+			577	957	553
+			562	958	535
+			511	968	506
+			505	969	487
+			493	971	464
+			492	972	435
+			484	973	417
+			480	975	398
+			474	976	380
+			470	977	364
+			462	977	355
+			456	978	336
+			452	979	329
+			446	981	303
+			437	982	282
+			429	984	255
+			423	985	242
+			422	986	229
+			414	987	211
+			411	988	199
+			405	989	191
+			397	990	171
+			391	991	140
+			387	992	126
+			384	993	107
+			372	995	84
+			364	997	54
+			356	998	26
+			356	998	13
+			0	1000	0
+			>;
 	};
-
 };
