--- a/arch/arm64/configs/excel-herolte_defconfig
+++ b/arch/arm64/configs/excel-herolte_defconfig
@@ -1194,7 +1194,7 @@ CONFIG_UID_STAT=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
-CONFIG_TIMA_LOG=y
+# CONFIG_TIMA_LOG is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -4356,9 +4356,9 @@ CONFIG_TRUSTONIC_TEE=y
 CONFIG_TRUSTONIC_TEE_LPAE=y
 # CONFIG_TRUSTONIC_TEE_DEBUG is not set
 # CONFIG_TRUSTONIC_TRUSTED_UI is not set
-CONFIG_SECURE_OS_CONTROL=y
+# CONFIG_SECURE_OS_CONTROL is not set
 CONFIG_SECURE_OS_BOOSTER_API=y
-CONFIG_TRUSTED_UI_TOUCH_ENABLE=y
+# CONFIG_TRUSTED_UI_TOUCH_ENABLE is not set
 CONFIG_EXYNOS_APM=y
 CONFIG_EXYNOS_MBOX=y
 CONFIG_EXYNOS8890_APM=y
